refactor: 使用 collect 替代 toList 方法以提高代码一致性，实现java11